--- a/package.json
+++ b/package.json
@@ -33,7 +33,16 @@
     "prebuild:linux:arm64": "bun run scripts/verify-binaries.js --platform linux",
     "build:linux:arm64": "bun run build:ui && electron-builder --linux --arm64 --publish never",
     "prebuild:all": "bun run scripts/verify-binaries.js --platform all",
-    "build:all": "bun run build:ui && electron-builder --mac --win --linux --publish never"
+    "build:all": "bun run build:ui && electron-builder --mac --win --linux --publish never",
+    "tauri": "tauri",
+    "tauri:dev": "bun run tauri dev",
+    "tauri:build": "bun run tauri build",
+    "tauri:build:mac": "bun run tauri build --target universal-apple-darwin && bun run sign:mac",
+    "sign:mac": "find src-tauri/target -name \"Stream Gate.app\" -type d -exec bash scripts/sign-mac.sh {} \\;",
+    "tauri:build:mac:arm64": "bun run tauri build --target aarch64-apple-darwin && bun run sign:mac",
+    "tauri:build:mac:x64": "bun run tauri build --target x86_64-apple-darwin && bun run sign:mac",
+    "tauri:build:win": "bun run tauri build --target x86_64-pc-windows-msvc",
+    "tauri:build:linux": "bun run tauri build --target x86_64-unknown-linux-gnu"
   },
   "keywords": [
     "vpn",
@@ -53,6 +62,7 @@
   },
   "homepage": "https://github.com/free-mba/Stream-Gate.git#readme",
   "devDependencies": {
+    "@tauri-apps/cli": "2.10.0",
     "@types/http-proxy": "1.17.17",
     "@types/ip": "1.1.3",
     "@types/node": "25.2.0",
