--- a/src/start-renderer/package.json
+++ b/src/start-renderer/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
+    "@tauri-apps/api": "^2.10.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.2",
     "jotai": "^2.17.0",
