chore(release): bump version to 1.0.1 and fix build scripts

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stream-gate",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Stream Gate - VPN Client with HTTP Proxy",
   "main": "dist/main/main.mjs",
   "scripts": {
@@ -16,24 +16,24 @@
     "clean:binaries": "bun run scripts/clean-binaries.js",
     "verify:binaries": "bun run scripts/verify-binaries.js --platform all",
     "prebuild:mac": "bun run scripts/verify-binaries.js --platform mac",
-    "build:mac": "bun run build:ui && electron-builder --mac --publish never",
-    "prebuild:mac:arm64": "bun run scripts/verify-binaries.js --platform mac --arch arm64",
-    "build:mac:arm64": "bun run build:ui && electron-builder --mac --arm64 --publish never",
-    "prebuild:mac:x64": "bun run scripts/verify-binaries.js --platform mac --arch x64",
-    "build:mac:x64": "bun run build:ui && electron-builder --mac --x64 --publish never",
+    "build:mac": "bun run build:main && bun run build:ui && electron-builder --mac --publish never",
+    "prebuild:mac:arm64": "bun run scripts/verify-binaries.js --platform mac",
+    "build:mac:arm64": "bun run build:main && bun run build:ui && electron-builder --mac --arm64 --publish never",
+    "prebuild:mac:x64": "bun run scripts/verify-binaries.js --platform mac",
+    "build:mac:x64": "bun run build:main && bun run build:ui && electron-builder --mac --x64 --publish never",
     "prebuild:win": "bun run scripts/verify-binaries.js --platform win",
-    "build:win": "bun run build:ui && electron-builder --win --publish never",
+    "build:win": "bun run build:main && bun run build:ui && electron-builder --win --publish never",
     "prebuild:win:x64": "bun run scripts/verify-binaries.js --platform win",
     "prebuild:win:ia32": "bun run scripts/verify-binaries.js --platform win",
-    "build:win:ia32": "bun run build:ui && electron-builder --win --ia32 --publish never",
+    "build:win:ia32": "bun run build:main && bun run build:ui && electron-builder --win --ia32 --publish never",
     "prebuild:linux": "bun run scripts/verify-binaries.js --platform linux",
-    "build:linux": "bun run build:ui && electron-builder --linux --publish never",
+    "build:linux": "bun run build:main && bun run build:ui && electron-builder --linux --publish never",
     "prebuild:linux:x64": "bun run scripts/verify-binaries.js --platform linux",
-    "build:linux:x64": "bun run build:ui && electron-builder --linux --x64 --publish never",
+    "build:linux:x64": "bun run build:main && bun run build:ui && electron-builder --linux --x64 --publish never",
     "prebuild:linux:arm64": "bun run scripts/verify-binaries.js --platform linux",
-    "build:linux:arm64": "bun run build:ui && electron-builder --linux --arm64 --publish never",
+    "build:linux:arm64": "bun run build:main && bun run build:ui && electron-builder --linux --arm64 --publish never",
     "prebuild:all": "bun run scripts/verify-binaries.js --platform all",
-    "build:all": "bun run build:ui && electron-builder --mac --win --linux --publish never"
+    "build:all": "bun run build:main && bun run build:ui && electron-builder --mac --win --linux --publish never"
   },
   "keywords": [
     "vpn",
