--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stream-gate",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Stream Gate - VPN Client with HTTP Proxy",
   "main": "dist/main/main.mjs",
   "scripts": {
@@ -98,17 +98,11 @@
       "extraResources": [
         {
           "from": "binaries/stream-client-mac-arm64",
-          "to": "binaries/stream-client-mac-arm64",
-          "filter": [
-            "**/*"
-          ]
+          "to": "binaries/"
         },
         {
           "from": "binaries/stream-client-mac-intel",
-          "to": "binaries/stream-client-mac-intel",
-          "filter": [
-            "**/*"
-          ]
+          "to": "binaries/"
         }
       ],
       "target": "dmg",
@@ -129,10 +123,7 @@
       "extraResources": [
         {
           "from": "binaries/stream-client-win.exe",
-          "to": "binaries/stream-client-win.exe",
-          "filter": [
-            "**/*"
-          ]
+          "to": "binaries/"
         }
       ]
     },
@@ -147,10 +138,7 @@
       "extraResources": [
         {
           "from": "binaries/stream-client-linux",
-          "to": "binaries/stream-client-linux",
-          "filter": [
-            "**/*"
-          ]
+          "to": "binaries/"
         }
       ]
     },
