--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stream-gate",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Stream Gate - VPN Client with HTTP Proxy",
   "main": "dist/main/main.mjs",
   "scripts": {
@@ -98,11 +98,11 @@
       "extraResources": [
         {
           "from": "binaries/stream-client-mac-arm64",
-          "to": "binaries/"
+          "to": "binaries/stream-client-mac-arm64"
         },
         {
           "from": "binaries/stream-client-mac-intel",
-          "to": "binaries/"
+          "to": "binaries/stream-client-mac-intel"
         }
       ],
       "target": "dmg",
@@ -123,7 +123,7 @@
       "extraResources": [
         {
           "from": "binaries/stream-client-win.exe",
-          "to": "binaries/"
+          "to": "binaries/stream-client-win.exe"
         }
       ]
     },
@@ -138,7 +138,7 @@
       "extraResources": [
         {
           "from": "binaries/stream-client-linux",
-          "to": "binaries/"
+          "to": "binaries/stream-client-linux"
         }
       ]
     },
