--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stream-gate",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Stream Gate - VPN Client with HTTP Proxy",
   "main": "dist/main/main.mjs",
   "scripts": {
@@ -16,11 +16,11 @@
     "clean:binaries": "bun run scripts/clean-binaries.js",
     "verify:binaries": "bun run scripts/verify-binaries.js --platform all",
     "prebuild:mac": "bun run scripts/verify-binaries.js --platform mac",
-    "build:mac": "bun run build:main && bun run build:ui && electron-builder --mac --publish never",
+    "build:mac": "echo 'Building Main...' && bun run build:main && echo 'Building UI...' && bun run build:ui && echo 'Packaging (Mac)...' && electron-builder --mac --publish never",
     "prebuild:mac:arm64": "bun run scripts/verify-binaries.js --platform mac",
-    "build:mac:arm64": "bun run build:main && bun run build:ui && electron-builder --mac --arm64 --publish never",
+    "build:mac:arm64": "echo 'Building Main...' && bun run build:main && echo 'Building UI...' && bun run build:ui && echo 'Packaging (Mac ARM64)...' && electron-builder --mac --arm64 --publish never",
     "prebuild:mac:x64": "bun run scripts/verify-binaries.js --platform mac",
-    "build:mac:x64": "bun run build:main && bun run build:ui && electron-builder --mac --x64 --publish never",
+    "build:mac:x64": "echo 'Building Main...' && bun run build:main && echo 'Building UI...' && bun run build:ui && echo 'Packaging (Mac Intel)...' && electron-builder --mac --x64 --publish never",
     "prebuild:win": "bun run scripts/verify-binaries.js --platform win",
     "build:win": "bun run build:main && bun run build:ui && electron-builder --win --publish never",
     "prebuild:win:x64": "bun run scripts/verify-binaries.js --platform win",
