--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stream-gate",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Stream Gate - VPN Client with HTTP Proxy",
   "main": "dist/main/main.mjs",
   "scripts": {
@@ -83,6 +83,7 @@
       "dist/main/**/*",
       "src/start-renderer/dist/**/*",
       "assets/**/*",
+      "scripts/dns-scanner-worker.js",
       "index.html",
       "package.json",
       "!**/node_modules",
