--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -48,7 +48,7 @@ log = "0.4"
 dirs = "6"
 
 # DNS resolution
-trust-dns-resolver = "0.23"
+trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }
 
 # UUID for unique identifiers
 uuid = { version = "1", features = ["v4"] }
