--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -65,6 +65,9 @@ once_cell = "1"
 # Open URLs in default browser
 open = "5"
 
+# Clipboard support
+arboard = "3"
+
 [target.'cfg(target_os = "macos")'.dependencies]
 # macOS specific
 
