--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -59,6 +59,12 @@ base64 = "0.22"
 # Time handling
 chrono = { version = "0.4", features = ["serde"] }
 
+# Random number generation
+rand = "0.8"
+
+# Base32 encoding
+data-encoding = "2.6"
+
 # Lazy initialization
 once_cell = "1"
 
