--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stream-gate",
-  "version": "1.1.0-beta.1",
+  "version": "1.1.0",
   "description": "Stream Gate - VPN Client with HTTP Proxy",
   "main": "dist/main/main.mjs",
   "scripts": {
